--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title>My Page Title</title>
-  <meta name="description" content="My Page Description">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="stylesheet" href="styles.css">
+
+  <link rel="stylesheet" href="odometer-theme-default.css" />
+<script type="text/javascript" src="odometer.js"></script>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+
+  <script src="code.js">
+
+  </script>
+
+  <title>Welcome to Procura</title>
 </head>
+
 <body>
-  <script src="js/scripts.js"></script>
+
+
+  <img src="Assets/background2.png" />
+  <h1 class="h11">Procura</h1>
+
+  <h1 class="mainTitle">MANAGE <br> YOUR <br> HACKATHON <br> TODAY</h1>
+
+  <img src="Assets/clipartusenewnew.png" class="imageMain">
+
+  <button class="getStartedBtn">Get Started →</button>
+
+  <div style="height: 400px;"></div>
+
+  <ul style="display: flex; list-style-type: none;">
+    <li>
+      <h1 class="odometer">90</h1>
+      <h1 class="statsMiniTxt" >Mentors Registered</h1>
+    </li>
+
+
+    <li style="margin-left: 200px;">
+      <h1 class="odometer">90</h1>
+      <h1 class="statsMiniTxt" >Hackers Registered</h1>
+    </li>
+
+    <li style="margin-left: 200px;">
+      <h1 class="odometer" id = "odometer">0</h1>
+      <h1 class="statsMiniTxt">Hackathons Hosted</h1>
+    </li>
+
+  </ul>
+
+  <script>
+    window.odometerOptions = {
+  auto: false, // Don't automatically initialize everything with class 'odometer'
+  selector: '.my-numbers', // Change the selector used to automatically find things to be animated
+  format: '(,ddd).dd', // Change how digit groups are formatted, and how many digits are shown after the decimal point
+  duration: 3000, // Change how long the javascript expects the CSS animation to take
+  theme: 'car', // Specify the theme (if you have more than one theme css file on the page)
+  animation: 'count' // Count is a simpler animation method which just increments the value,
+                     // use it when you're looking for something more subtle.
+};
+  </script>
+
+  <script>
+    window.odometerOptions = {
+      format: '(ddd).dd'
+    };
+    </script>
+
+  <script>
+    setTimeout(function() {
+	  odometer.innerHTML = 120;
+  }, 1000);
+  </script>
+
+  <div style="height: 300px;"></div>
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
