--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 
       </div>
 
-      <img src="Assets/clipartusenewnew.png" class="img-responsive" style="height: 300px; width: 300px;">
+      <img src="Assets/cliparusenew.png" class="img-responsive" style="height: 300px; width: 300px;">
     </div>
   </div>
 
 
   <!--BOTTOM CURVE-->
 
-  <img src="Assets/bottomcurve.png"/>
+  <img src="Assets/bottomcurve.png" class="img-fluid"/>
 
   <div style="height: 400px;"></div>
 
