--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <span class="placeholder" style="width: 70px;"></span>
 
-        <img src="Assets/cliparusenew.png" class="img-responsive" style="height: 400px; width: 400px;">
+        <img src="Assets/isometric_clipart.png" class="img-responsive" style="height: 450px; width: 450px;">
 
       </div>
 
@@ -111,12 +111,37 @@
 
   </div>
 
-
   <!--BOTTOM CURVE-->
 
   <img src="Assets/bottomcurve.png" class="img-fluid" />
 
-  <div style="height: 400px;"></div>
+  <div style="height: 200px;"></div>
+
+  <!-- FEATURES SCREEN-->
+  <div class="d-flex justify-content-center">
+
+    <div class="row">
+      <div class="d-flex flex-column">
+        <div class="p-2">Flex item 1</div>
+        <div class="p-2">Flex item 2</div>
+      </div>
+
+      <div class="d-flex flex-column">
+        <div class="p-2">Flex item 1</div>
+        <div class="p-2">Flex item 2</div>
+        <div class="p-2">Flex item 3</div>
+      </div>
+
+      <div class="d-flex flex-column">
+        <div class="p-2">Flex item 1</div>
+        <div class="p-2">Flex item 2</div>
+        <div class="p-2">Flex item 3</div>
+      </div>
+    </div>
+  </div>
+
+  <div style="height: 300px;"></div>
+
 
   <!--STATS SECTION-->
   <div class="container-fluid" id="statsSection">
@@ -128,7 +153,7 @@
         <div class="p-2">
 
           <!-- MENTORS REGISTERED SECTION-->
-          <h1 class="odometer">90</h1>
+          <h1 class="odometer" id = "mentorsRegistered">90</h1>
           <h1 class="statsMiniTxt">Mentors Registered</h1>
 
         </div>
@@ -138,7 +163,7 @@
 
         <div class="p-2">
 
-          <h1 class="odometer">90</h1>
+          <h1 class="odometer" id = "hackersRegistered">90</h1>
           <h1 class="statsMiniTxt">Hackers Registered</h1>
 
         </div>
@@ -147,10 +172,13 @@
 
         <div class="p-2">
 
-          <h1 class="odometer" id="odometer">0</h1>
+          <h1 class="odometer" id="hackathonsHosted">0</h1>
           <h1 class="statsMiniTxt">Hackathons Hosted</h1>
 
         </div>
+
+
+
 
         <script>
           window.odometerOptions = {
@@ -170,11 +198,7 @@
           };
         </script>
 
-        <script>
-          setTimeout(function () {
-            odometer.innerHTML = 120;
-          }, 1000);
-        </script>
+        
 
       </div>
 
