--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
   </div>
 
   <div style="height: 300px;"></div>
-
-
+  
   <!--STATS SECTION-->
-  <div class="container-fluid" id="statsSection">
+
+  <!--
+    <div class="container-fluid" id="statsSection">
 
     <div class="d-flex justify-content-center">
 
@@ -170,7 +171,7 @@
       <div class="row">
         <div class="p-2">
 
-          <!-- MENTORS REGISTERED SECTION-->
+           MENTORS REGISTERED SECTION
           <h1 class="odometer" id = "mentorsRegistered">90</h1>
           <h1 class="statsMiniTxt">Mentors Registered</h1>
 
@@ -222,20 +223,38 @@
 
     </div>
   </div>
+  -->
+  
+  
 
 
 
 
   <div style="height: 300px;"></div>
 
-
-
-
-
-
-
-
+  
+  
 
 </body>
+
+<!-- FOOTER -->
+
+<footer class="container-fluid" style="width: 100%; background-color: #eff3f9; height: 200px;">
+
+  <div class="d-flex flex-column">
+
+    <span style="height: 20px;"></span>
+
+    <div class="d-flex justify-content-center" style="font-size: 25px; font-weight: 600; color: black;">Gest Started Now!</div>
+      <div class="row justify-content-md-center">
+        <img src="Assets/google-play-badge.png" class="img-responsive" height="90px">
+        <img src="Assets/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" height="65px" class="img-responsive" style="margin-top: 11px;">
+
+    
+  </div>
+      </div>
+    </footer>
+
+
 
 </html>
