--- a/index.html
+++ b/index.html
@@ -232,14 +232,10 @@
 
   <div style="height: 300px;"></div>
 
-  
-  
+  <!--DOWNLOAD SECTION-->
 
-</body>
 
-<!-- FOOTER -->
-
-<footer class="container-fluid" style="width: 100%; background-color: #eff3f9; height: 200px;">
+<div class="container-fluid" style="width: 100%; background-color: #eff3f9; height: 200px;">
 
   <div class="d-flex flex-column">
 
@@ -249,11 +245,22 @@
       <div class="row justify-content-md-center">
         <img src="Assets/google-play-badge.png" class="img-responsive" height="90px">
         <img src="Assets/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" height="65px" class="img-responsive" style="margin-top: 11px;">
-
-    
   </div>
       </div>
-    </footer>
+      </div>
+    </div>
+
+  
+  
+
+</body>
+
+
+
+    <!--FOOTER-->
+
+    <div class="container-fluid" style="background-color: #1F2D41; height: 300px; width: 100%;">
+    </div>
 
 
 
