--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
 
   <link rel="stylesheet" href="odometer-theme-default.css" />
   <script type="text/javascript" src="odometer.js"></script>
@@ -163,6 +163,8 @@
   <!--STATS SECTION-->
 
   <!--
+
+
     <div class="container-fluid" id="statsSection">
 
     <div class="d-flex justify-content-center">
@@ -224,8 +226,6 @@
     </div>
   </div>
   -->
-  
-  
 
 
 
@@ -249,6 +249,8 @@
       </div>
       </div>
     </div>
+
+    
 
   
   
