--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
 
+<!--HEAD-->
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
 
   <link rel="stylesheet" href="CSS/styles.css">
 
@@ -84,43 +85,46 @@
 
   <!--HEADER-->
 
-  <div class="container-fluid" style="position: absolute; top: 20%;">
+  <section class="header" style="background-color: #400072;">
+    <div class="placeholder" style="height: 40px;"></div>
+    <div class="container-fluid">
 
-    <div class="d-flex justify-content-center">
-
-      <div class="row">
-
-        <div class="d-flex flex-column" data-aos="fade-up">
-
-          <h1 class="mainTitle">MANAGE <br> YOUR <br> HACKATHON <br> TODAY</h1>
-
-          <h1 class="header-dscrp">Procura makes managing hackathons a <br> breeze. From taking attendence to making
-            <br> announcements, Procura does it all.</h1>
-
-          <span class="placeholder" style="height: 20px;"></span>
-
-          <div class="row">
-
-            <button class="learnMoreBtn" href="#statsSection">Learn More →</button>
-
-            <span class="placeholder" style="width: 20px;"></span>
-
-            <button class="getStartedBtn">Get Started</button>
+      <div class="d-flex justify-content-center">
+  
+        <div class="row h-30">
+  
+          <div class="d-flex flex-column" data-aos="fade-up">
+  
+            <h1 class="mainTitle">MANAGE <br> YOUR <br> HACKATHON <br> TODAY</h1>
+  
+            <h1 class="header-dscrp">Procura makes managing hackathons a <br> breeze. From taking attendence to making
+              <br> announcements, Procura does it all.</h1>
+  
+            <span class="placeholder" style="height: 20px;"></span>
+  
+            <div class="row">
+  
+              <button class="learnMoreBtn" href="#statsSection">Learn More →</button>
+  
+              <span class="placeholder" style="width: 20px;"></span>
+  
+              <button class="getStartedBtn">Get Started</button>
+            </div>
+  
+  
+  
           </div>
-
-
-
+  
+          <span class="placeholder" style="width: 70px;"></span>
+  
+          <img src="Assets/header_clipart.png" style="height: 450px; width: 450px;" data-aos="fade-left" data-aos-delay="200">
+  
         </div>
-
-        <span class="placeholder" style="width: 70px;"></span>
-
-        <img src="Assets/isometric_clipart.png" class="img-responsive" style="height: 450px; width: 450px;" data-aos="fade-left" data-aos-delay="200">
-
+  
       </div>
-
+  
     </div>
-
-  </div>
+  </section>
 
   <!--BOTTOM CURVE-->
 
@@ -128,13 +132,17 @@
 
   <div style="height: 200px;"></div>
 
+
+
+
+
   <!-- FEATURES SCREEN-->
   <div class="d-flex justify-content-center">
 
     <div class="row">
       <div class="d-flex justify-content-center">
 
-        <div class="col-md-20 text-center">
+        <div class="col-md-20 text-center" style="margin-left: inherit;">
           <img src="Assets/listing_icon.png" height="90px" width = "90px" class="img-fluid">
           <div class="descriptionTitle" style="font-size: 22px;" >Post Hackathon Listing</div>
           <p style="align-items: center;">Our listing system allows you to advertise your <br> hackathon. This makes it accessable to <br> more hackers, way to boost your popularity!</p>
@@ -144,9 +152,9 @@
 
       <span class="placeholder" style="width: 50px;"></span>
 
-      <div class="d-flex justify-content-center" style="margin-left: 20px;">
+      <div class="d-flex justify-content-center">
 
-        <div class="col-md-20 text-center">
+        <div class="col-md-20 text-center" style="margin-left: 4rem;">
           <img src="Assets/speaker_icon.png" height="90px" width = "90px" class="img-fluid">
           <div class="descriptionTitle" style="font-size: 22px;" >Real Time Announcements</div>
           <p style="align-items: center;">It doesn't matter which corner of the room your<br>hackers are. Push announcements in real time so that <br> everyone knows what to do! <br> Communication is key!</p>
