--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=5, minimal-ui">
 
   <link rel="stylesheet" href="CSS/styles.css">
 
