--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <script type="text/javascript" src="odometer.js"></script>
 
   <!-- Bootstrap CSS -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -47,7 +44,7 @@
 
   </script>
 
-  <title>Welcome to Procura</title>
+  <title>Procura</title>
 </head>
 
 <body>
