--- a/index.html
+++ b/index.html
@@ -61,34 +61,37 @@
         <span class="navbar-toggler-icon" style="color: honeydew;"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="color: honeydew;">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="color: white;">
+        <ul class="navbar-nav mr" style="color: white;">
+          <li class="nav-item active" style="color: white;">
             <a class="nav-link" href="#" style="color: rgb(204, 204, 204); font-size: 20px; font-weight: 630;">Home
               <span class="sr-only">(current)</span></a>
           </li>
+
+          <li>
+            <div style="width: 20px;"></div>
+          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: rgb(204, 204, 204); font-size: 20px; font-weight: 630;">Info</a>
           </li>
-          <li class="nav-item dropdown">
+
+          <li>
+            <div style="width: 20px;"></div>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="#" tabindex="-1"
               style="color: rgb(204, 204, 204); font-size: 20px; font-weight: 630;">Download</a>
           </li>
+
+          <li>
+            <div style="width: 20px;"></div>
+          </li>
+
+
           <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" style="height: 30px;
-            margin-top: 10px;
-            width: 100px;
-            background-color: 
-            white;
-            color: blueviolet;
-            font-size: 20px;
-            font-weight: 700;
-            border-radius: 20px;
-            padding-bottom: 30px;
-        
-            ">Pricing</a>
+            <button class="pricingOption-btn" href="#" tabindex="-1">PRICING</button>
           </li>
         </ul>
       </div>
@@ -204,13 +207,13 @@
     <div class="d-flex justify-content-center">
       <div class="row justify-content-center align-self-center" style="width: 400px;">
         <div class="col">
-          <h1 class="featureTitles">A New Way to Host A Hackathon</h1>
+          <h1 class="featureTitles">A New Way to Host Hackathons</h1>
 
           <p class="featureCaptions">With Procura, you can do it all! From taking attendence to announcing <br> winners,
             you can do it all from the app! Its all easy, get started now!</p>
 
 
-          <button class="learnMoreBtn1">Get Started</button>
+          <button class="learnMoreBtn1">View Features</button>
 
         </div>
 
@@ -221,6 +224,23 @@
       <img src="Assets/iphone_mockup_feature1.png" height="670px">
     </div>
 
+  </div>
+
+  <div style="height: 50px;"></div>
+
+
+  <!-- FEATURES SECTION MAIN-->
+
+  <div class="features-section-main">
+    <div class="container-fluid">
+      <div class="d-flex justify-content-center">
+        <div class="col align-self-center">
+          <div class="row justify-content-center align-self-center">
+            <h1>Procura Features</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
