--- a/index.html
+++ b/index.html
@@ -601,8 +601,11 @@
               <li>
                 Live announcements
               </li>
+              <li>
+                Unlimited Hackathons per month
+              </li>
             </ul>
-            <center style="margin-top: 282px">
+            <center style="margin-top: 237px">
               <button style="width: 320px; height: 50px; border: 2px solid rgb(255, 255, 255); background-color: transparent; font-size: 20px; color: white; " class="button2">
                 Get started!
   
@@ -652,8 +655,11 @@
               <li>
                 Live announcements
               </li>
+              <li>
+                Unlimited lifetime Hackathons
+              </li>
             </ul>
-            <center style="margin-top: 282px">
+            <center style="margin-top: 272px">
               <button style="width: 320px; height: 50px; border: 2px solid black; background-color: transparent; font-size: 20px; color: black; " class="button2">
                 Get started!
   
