--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
   <!--DOWNLOAD SECTION-->
 
 
-  <div class="container-fluid" style="width: 100%; background-color: #eff3f9; height: 200px;">
+  <div class="container-fluid" style="width: 100%; background-color: #eff3f9;">
 
     <div class="d-flex flex-column">
 
