--- a/index.html
+++ b/index.html
@@ -631,8 +631,9 @@
 
       <span style="height: 20px;"></span>
 
-      <div class="d-flex justify-content-center" style="font-size: 25px; font-weight: 600; color: black;">Gest Started
+      <div class="d-flex justify-content-center" style="font-size: 25px; font-weight: 600; color: black;">Get Started
         Now!</div>
+        
       <div class="row justify-content-md-center">
         <img src="Assets/google-play-badge.png" class="img-responsive" height="90px">
         <img src="Assets/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" height="65px" class="img-responsive"
