--- a/routes/login.html
+++ b/routes/login.html
@@ -5,6 +5,8 @@
 	<title>Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
 
 	<link rel="stylesheet" type="text/css" href="../CSS/util.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/loginstyle.css">
@@ -81,7 +83,7 @@
 							Not a member?
 						</span>
 
-						<a href="#" class="txt2 bo1">
+						<a href="../routes/signup.html" class="txt2 bo1">
 							Sign up now
 						</a>
 					</div>
@@ -125,6 +127,8 @@
 
 
 		}
+
+		$("")
 
 
 	</script>
