--- a/routes/signup.html
+++ b/routes/signup.html
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="container-login100-form-btn m-t-17">
-                        <button class="login100-form-btn" onclick="emailSignUp()" id="btnSignUp">
+                        <button class="login100-form-btn"  id="btnSignUp">
                             <p style="font-family: 'Roboto', sans-serif; color: white;">Sign Up</p>
                         </button>
                     </div>
@@ -125,7 +125,7 @@
         
 
         btnSignUp.addEventListener('click', e => {
-            const email = textEmail.value;
+            const email = txtEmail.value;
             const pass = txtPassword.value;
             const auth = firebase.auth();
 
