--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
               </li>
             </ul>
             <center style="margin-top: 185px">
-              <a href="./routes/login.html"><button
+              <a href="./views/login.html"><button
                   style="width: 320px; height: 50px; border: 2px solid black; background-color: transparent; font-size: 20px; color: black; margin-top: 180px; "
                   class="button2">
                   Get started!
