--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <body>
 
     <ul class="navbar-default" id="navbar">
-      <li><a class="active" href="#home" style="font-size: ;">Procura</a></li>
+      <li><a class="active" href="#home" >Procura</a></li>
       <li><a href="#news">Features</a></li>
       <li><a href="#contact">Plans</a></li>
       <li><a href="#about">More Information</a></li>
