--- a/index.html
+++ b/index.html
@@ -581,10 +581,13 @@
               <li>
                 One premium hackathon
               </li>
+              <li>
+                Get our latest analytics to view how your hackathon is doing!
+              </li>
             </ul>
             <center style="margin-top: 79px">
               <a href="./routes/login.html"><button
-                  style="width: 320px; height: 50px; border: 2px solid black; background-color: transparent; font-size: 20px; color: black; margin-top: 75px; "
+                  style="width: 320px; height: 50px; border: 2px solid black; background-color: transparent; font-size: 20px; color: black; margin-top: 20px; "
                   class="button2">
                   Get started!
 
@@ -600,13 +603,13 @@
         <!--MONTHLY PLAN-->
 
         <div class="col" style=" padding-top: 40px;">
-          <h1 style="font-weight: bold;"> Monthly <span class="badge badge-warning">Popular</span> </h1>
+          <h1 style="font-weight: bold;"> Yearly <span class="badge badge-warning">Popular</span> </h1>
           <p style="color: black; font-size: 15px; font-weight: bold;">Best for frequent hackathon hosters</p>
           <div class="size1" style="background-color: #9c67ff;" data-aos="zoom-in">
 
             <h1
               style="font-weight: bold; font-size: 40px; margin-left: 20px; padding-top: 20px; display: flex; color: white;">
-              <p style="color:white; font-weight: bold; font-size: 22px;">$ </p> 4.99 <p
+              <p style="color:white; font-weight: bold; font-size: 22px;">$ </p> 99.99 <p
                 style="color:white; font-weight: bold; font-size: 22px; margin-top: 14px;"> /m </p>
             </h1>
 
@@ -637,11 +640,14 @@
               <li>
                 Unlimited Hackathons per month
               </li>
+              <li>
+                Get our latest analytics to view how your hackathon is doing!
+              </li>
             </ul>
             <center style="margin-top: 65px">
               <a href="./routes/login.html">
                 <button
-                  style="width: 320px; height: 50px; border: 2px solid white; background-color: transparent; font-size: 20px; color: white; margin-top: 65px; "
+                  style="width: 320px; height: 50px; border: 2px solid white; background-color: transparent; font-size: 20px; color: white; margin-top: 10px; "
                   class="button2">
                   Get started!
 
